tests/reference/asr_preprocess-cpp4-7d217a3.stderr
warning: Implied save feature
 --> tests/errors/cpp4.f90:8:1
  |
8 | integer :: x, y
  | ^^^^^^^^^^^^^^^ Assuming save attribute implicitly for variables

warning: Implied save feature
 --> tests/errors/cpp4.f90:8:1
  |
8 | integer :: x, y
  | ^^^^^^^^^^^^^^^ Assuming save attribute implicitly for variables

semantic error: Variable 'z12345678' is not declared
  --> tests/errors/cpp4.f90:11:13
   |
11 | print *, x, C123, y
   |             ^^^^ 'z12345678' is undeclared
